# JediOutcastLinux

./: .gitmodules  BUILD.md  CMakeLists.txt  README  README.txt  README_Raven.txt  starwars.workspace
CODE-mp/: WinDed.dsp  WinDed.plg  buildvms.bat  installvms.bat  jk2mp-SDK.dsw  jk2mp-SDK.opt  jk2mp.dsp  jk2mp.dsw  jk2mp.opt  jk2mp.plg  tosend.bat
CODE-mp/Debug/: botlib.lib  cgamex86.lib  jk2mpgamex86.lib  uix86.lib
CODE-mp/Final/: botlib.lib  cgamex86.lib  jk2mpgamex86.lib  uix86.lib
CODE-mp/Release/: botlib.lib  cgamex86.lib  jk2mpgamex86.lib  uix86.lib
CODE-mp/Splines/: Splines.dsp  math_angles.cpp  math_angles.h  math_matrix.cpp  math_matrix.h  math_quaternion.cpp  math_quaternion.h  math_vector.cpp  math_vector.h  q_parse.cpp  q_shared.cpp  q_shared.h  splines.cpp  splines.h  util_list.h  util_str.cpp  util_str.h
CODE-mp/base/: server.cfg
CODE-mp/botlib/: aasfile.h  be_aas_bsp.h  be_aas_bspq3.cpp  be_aas_cluster.cpp  be_aas_cluster.h  be_aas_debug.cpp  be_aas_debug.h  be_aas_def.h  be_aas_entity.cpp  be_aas_entity.h  be_aas_file.cpp  be_aas_file.h  be_aas_funcs.h  be_aas_main.cpp  be_aas_main.h  be_aas_move.cpp  be_aas_move.h  be_aas_optimize.cpp  be_aas_optimize.h  be_aas_reach.cpp  be_aas_reach.h  be_aas_route.cpp  be_aas_route.h  be_aas_routealt.cpp  be_aas_routealt.h  be_aas_sample.cpp  be_aas_sample.h  be_ai_char.cpp  be_ai_chat.cpp  be_ai_gen.cpp  be_ai_goal.cpp  be_ai_move.cpp  be_ai_weap.cpp  be_ai_weight.cpp  be_ai_weight.h  be_ea.cpp  be_interface.cpp  be_interface.h  botlib.dsp  botlib.plg  (+15 more)
CODE-mp/cgame/: JK2_cgame.dsp  JK2_cgame.plg  animtable.h  cg_consolecmds.c  cg_draw.c  cg_draw.mrg  cg_drawtools.c  cg_effects.c  cg_ents.c  cg_event.c  cg_info.c  cg_light.c  cg_lights.h  cg_local.h  cg_localents.c  cg_main.c  cg_marks.c  cg_newDraw.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_saga.c  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.asm  cg_syscalls.c  cg_turret.c  cg_view.c  cg_weaponinit.c  cg_weapons.c  cgame.bat  cgame.q3asm  fx_blaster.c  fx_bowcaster.c  fx_bryarpistol.c  fx_demp2.c  fx_disruptor.c  fx_flechette.c  (+5 more)
CODE-mp/client/: 0_SH_Leak.cpp  FXExport.cpp  FXExport.h  FxPrimitives.cpp  FxPrimitives.h  FxScheduler.cpp  FxScheduler.h  FxSystem.cpp  FxSystem.h  FxTemplate.cpp  FxUtil.cpp  FxUtil.h  cl_cgame.cpp  cl_cin.cpp  cl_console.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_net_chan.cpp  cl_parse.cpp  cl_scrn.cpp  cl_ui.cpp  client.h  keys.h  snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_mp3.cpp  snd_mp3.h  snd_public.h
CODE-mp/encryption/: cpp_interface.cpp  encryption.h
CODE-mp/game/: JK2_game.dsp  ai_main.c  ai_main.h  ai_util.c  ai_wpnav.c  anims.h  be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  bg_lib.c  bg_lib.h  bg_local.h  bg_misc.c  bg_panimate.c  bg_pmove.c  bg_public.h  bg_saber.c  bg_saga.h  bg_slidemove.c  bg_weapons.c  bg_weapons.h  botlib.h  chars.h  g_active.c  g_arenas.c  g_bot.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_local.h  g_log.c  g_main.c  g_mem.c  g_misc.c  (+28 more)
CODE-mp/ghoul2/: G2.h  G2_API.cpp  G2_bolts.cpp  G2_bones.cpp  G2_gore.h  G2_local.h  G2_misc.cpp  G2_surfaces.cpp  ghoul2_shared.h
CODE-mp/jpeg-6/: jcparam.cpp  jmemnobs.cpp  jmorecfg.h  jpeglib.h
CODE-mp/mp3code/: config.h  copyright.h  csbt.c  cupl1.c  cupl3.c  cwinb.c  htable.h  l3init.c  mdct.c  mhead.h  mp3struct.h  msis.c  port.h  towave.c
CODE-mp/null/: mac_net.c  null_client.cpp  null_glimp.c  null_input.cpp  null_main.c  null_net.c  null_renderer.cpp  null_snddma.cpp  win_main.cpp
CODE-mp/png/: png.cpp  png.h
CODE-mp/qcommon/: CNetProfile.cpp  GenericParser2.cpp  GenericParser2.h  INetProfile.h  MiniHeap.h  RoffSystem.cpp  RoffSystem.h  chash.h  cm_load.cpp  cm_local.h  cm_patch.cpp  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_shader.cpp  cm_test.cpp  cm_trace.cpp  cmd.cpp  common.cpp  cvar.cpp  disablewarnings.h  files.cpp  files.org  game_version.h  hstring.cpp  hstring.h  huffman.cpp  md4.cpp  msg.cpp  net_chan.cpp  q_math.cpp  q_shared.cpp  qcommon.h  qfiles.h  sstring.h  stri.cpp  strip.cpp  strip.h  tags.h  unzip.cpp  (+6 more)
CODE-mp/renderer/: matcomp.c  matcomp.h  qgl.h  renderer.dsp  tr_WorldEffects.cpp  tr_WorldEffects.h  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.cpp  tr_curve.cpp  tr_flares.cpp  tr_font.cpp  tr_font.h  tr_ghoul2.cpp  tr_image.cpp  tr_init.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_marks.cpp  tr_mesh.cpp  tr_model.cpp  tr_noise.cpp  tr_public.h  tr_quicksprite.cpp  tr_quicksprite.h  tr_scene.cpp  tr_shade.cpp  tr_shade_calc.cpp  tr_shader.cpp  tr_shadows.cpp  tr_sky.cpp  tr_surface.cpp  tr_surfacesprites.cpp  tr_world.cpp
CODE-mp/server/: server.h  sv_bot.cpp  sv_bot.org  sv_ccmds.cpp  sv_client.cpp  sv_client.org  sv_game.cpp  sv_game.org  sv_init.cpp  sv_main.cpp  sv_net_chan.cpp  sv_rankings.cpp  sv_snapshot.cpp  sv_world.cpp
CODE-mp/smartheap/: HEAPAGNT.H  SMRTHEAP.C  SMRTHEAP.H  smrtheap.hpp
CODE-mp/strings/: con_text.h  str_server.h
CODE-mp/ui/: keycodes.h  ui.bat  ui.dsp  ui.q3asm  ui_atoms.c  ui_force.c  ui_force.h  ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_public.h  ui_shared.c  ui_shared.h  ui_syscalls.asm  ui_syscalls.c  ui_util.c
CODE-mp/unix/: ftol.nasm  linux_common.c  linux_glimp.c  linux_joystick.c  linux_local.h  linux_qgl.c  linux_snd.c  makefile  snapvector.nasm  unix_main.c  unix_net.c  unix_shared.c  vm_x86.c
CODE-mp/win32/: glw_win.h  resource.h  win_gamma.cpp  win_glimp.cpp  win_input.cpp  win_local.h  win_main.cpp  win_net.cpp  win_qgl.cpp  win_shared.cpp  win_snd.cpp  win_syscon.cpp  win_wndproc.cpp
CODE-mp/winded/: WinDed.dsp  WinDed.plg  jk2mp.dsp  jk2mp.dsw  jk2mp.plg  put.bat
CODE-mp/zlib/: adler32.c  crc32.cpp  infblock.c  infcodes.c  inffast.c  inflate.c  inftrees.c  infutil.c  zlib.h  zutil.c
binary/base/: sdl_asset.pk3
code/: .gitignore  Default.SUP  StarWars.dsw  demo.bat  game.dsp  makefile  starwars.cbp  starwars.dsp  starwars.layout  starwars.plg  tonet.bat  tosend.bat
code/ff/: ff.cpp  (+27 more)
ui/: menudef.h
utils/: Utils.dsw
(+1096 files in other folders)
